# MC-MineEvolve

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
checkpoints/: README.md
docs/: architecture.md  tasks.md
scripts/: run_eval.bat  run_eval.sh  server.bat  server.sh
src/mineevolve/: __init__.py  main.py
src/mineevolve/adaptor/: __init__.py  prompts.py  repair.py
src/mineevolve/client/: __init__.py  server_api.py
src/mineevolve/conf/: evaluate.yaml
src/mineevolve/conf/benchmark/: armor.yaml  diamond.yaml  gold.yaml  iron.yaml  redstone.yaml  stone.yaml  wooden.yaml
src/mineevolve/conf/llm/: gemini_flash.yaml  glm_4_7.yaml  gpt_5_5.yaml  qwen_flash.yaml  qwen_plus.yaml
src/mineevolve/curator/: __init__.py  merge.py  retrieval.py  store.py  validation.py
src/mineevolve/env/: __init__.py  chat_action.py  custom_env.py  inventory_agent_start.py  wrapper.py
src/mineevolve/env/mods/: __init__.py  recorder.py  status.py  task_checker.py
src/mineevolve/executor/: __init__.py  craft_helper.py  steve_loader.py  steve_runner.py
src/mineevolve/inducer/: __init__.py  induce_remedy.py  induce_skill.py  prompts.py  schema.py
src/mineevolve/monitor/: __init__.py  buffer.py  failure.py  feedback.py  progress.py
src/mineevolve/monitors/: __init__.py  step.py  success.py
src/mineevolve/planner/: __init__.py  base.py  parser.py  prompts.py
src/mineevolve/server/: __init__.py  agent.py  api.py  routes.py
src/mineevolve/util/: __init__.py  evidence.py  image.py  items.py  logger.py  prompt.py  vocab.py
(+6 files in other folders)
